[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cybersecurity-mkdocs"
version = "0.1.0"
description = "MkDocs site for the cybersecurity repository"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mkdocs>=1.5",
  "mkdocs-material",
]
